# jaeger-desktop

./: .gitignore  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: config.yml  inject.js  prometheus.yml
src-tauri/src/: lib.rs  main.rs
