[package]
name = "jaeger-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jaeger_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
tauri-build = { version = "2", features = [] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.164"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.9", features = ["blocking"] }
dirs = "5.0.1"
tokio = { version = "1.41.1", features = ["macros", "sync", "time"] }
